# Jarvis

./: .gitignore  CONTINUE_TESTS.md  MANUAL_VALIDATION.md  README.md  pyproject.toml
.continue-smoke/: continue_smoke.py
.obsidian/: graph.json  workspace.json
apps/linux/: jarvis-local.desktop.in  package_help.html
apps/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
config/: .env.example  routing.yaml
config/continue/: config.yaml
config/obsidian/: SHELL_COMMANDS.md
config/prompts/: coach.md  jarvis.md  pesquisador.md  professor.md  (+1 more)
data/: memory_catalog.json
infra/: docker-compose.yml
knowledge/: index.md
scripts/: _ensure_python_env.sh  _resolve_python.sh  _runtime_env.sh  apply_quality_profile.sh  apply_speed_profile.sh  benchmark_models.sh  boot_local.sh  build_deb.sh  chat.sh  chat_repl.sh  code_chat.sh  code_chat_repl.sh  continue_preflight.sh  continue_smoke.sh  deb_smoke.sh  first_run.sh  index_knowledge.sh  install_deb_local.sh  install_host.sh  install_linux_app.sh  install_obsidian_plugin.sh  jarvis.sh  linux_app_smoke.sh  memory_action.sh  obsidian_chat.sh  obsidian_plugin_smoke.sh  obsidian_remember_note.sh  obsidian_research.sh  obsidian_summarize_note.sh  obsidian_sync_dir.sh  obsidian_sync_note.sh  package_doctor.sh  package_setup.sh  pull_models.sh  pwa_smoke.sh  research_chat.sh  research_chat_repl.sh  run_core.sh  run_linux_app.sh  seed_demo.sh  (+8 more)
tests/: conftest.py  test_api.py  test_cli.py  test_integrations.py  test_knowledge.py  test_memory.py  test_model_registry.py  test_router.py
wisdom/: index.md
(+87 files in other folders)
