[project]
name = "jarvis-local"
version = "0.1.0"
description = "Local-first personal assistant orchestrator powered by Ollama."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "qdrant-client>=1.15.1",
  "python-docx>=1.2.0",
  "openpyxl>=3.1.5",
  "pypdf>=5.8.0",
  "markdownify>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "apps/core"}

[tool.setuptools.packages.find]
where = ["apps/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

